--- a/AppointmentsSystem/Views/Home/Index.cshtml
+++ b/AppointmentsSystem/Views/Home/Index.cshtml
@@ -28,7 +28,7 @@
             <td>@item.Gender</td>
             <td>@item.Description</td>
             <td>
-                <a class="btn btn-info">View</a>
+                <a class="btn btn-info" asp-action="Details" asp-route-id="@item.Id">View</a>
             </td>
         </tr>
         }
