--- a/AppointmentsSystem/Views/_ViewImports.cshtml
+++ b/AppointmentsSystem/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using AppointmentsSystem
 @using AppointmentsSystem.Models
+@using BLL.DTOs.Appointment
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
