--- a/AppointmentsSystem/Views/Home/Details.cshtml
+++ b/AppointmentsSystem/Views/Home/Details.cshtml
@@ -1,17 +1,17 @@
-﻿@model AppointmentReadDTO
+﻿@model AppointmentDetailsVM
 
 @{
     ViewData["Title"] = "Details";
 }
 
-@*<td>@Model.Appointment.FirstName</td>
+    <td>@Model.Appointment.FirstName</td>
     <td>@Model.Appointment.LastName</td>
     <td>@Model.Appointment.PhoneNumber</td>
     <td>@Model.Appointment.Gender</td>
-    <td>@Model.Appointment.Description</td>*@
+    <td>@Model.Appointment.Description</td>
 
-<td>@Model.FirstName</td>
+@*<td>@Model.FirstName</td>
 <td>@Model.LastName</td>
 <td>@Model.PhoneNumber</td>
 <td>@Model.Gender</td>
-<td>@Model.Description</td>
+<td>@Model.Description</td>*@
