--- a/AppointmentsSystem/Views/Admin/CreateRole.cshtml
+++ b/AppointmentsSystem/Views/Admin/CreateRole.cshtml
@@ -8,10 +8,10 @@
     <div asp-validation-summary="All" class="text-danger">
     </div>
     <div class="form-group row">
-        <label asp-for="Role.RoleName" class="col-sm-2 col-form-label"></label>
+        <label asp-for="Role.Name" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
-            <input asp-for="Role.RoleName" class="form-control" placeholder="Name">
-            <span asp-validation-for="Role.RoleName" class="text-danger"></span>
+            <input asp-for="Role.Name" class="form-control" placeholder="Name">
+            <span asp-validation-for="Role.Name" class="text-danger"></span>
         </div>
     </div>
 
