--- a/AppointmentsSystem/Views/Admin/EditRole.cshtml
+++ b/AppointmentsSystem/Views/Admin/EditRole.cshtml
@@ -7,16 +7,23 @@
 <h1>Edit Role</h1>
 
 <form method="post" class="mt-3">
+    @*<div class="form-group row">
+        <label asp-for="Role.Id" class="col-sm-2 col-form-label"></label>
+        <div class="col-sm-10">
+            <input asp-for="Role.Id" text="@Model.Role.Name" disabled class="form-control">
+        </div>
+    </div>*@
     <div class="form-group row">
         <label asp-for="Role.Id" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
-            <input asp-for="Role.Id" disabled class="form-control">
+            <input asp-for="Role.Id" text="@Model.Role.Id" class="form-control">
+            <span asp-validation-for="Role.Id" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group row">
         <label asp-for="Role.Name" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
-            <input asp-for="Role.Name" text="@Model.Role.Name"class="form-control">
+            <input asp-for="Role.Name" text="@Model.Role.Name" class="form-control">
             <span asp-validation-for="Role.Name" class="text-danger"></span>
         </div>
     </div>
