Fixed Users in role in EditRole

--- a/AppointmentsSystem/Views/Admin/EditRole.cshtml
+++ b/AppointmentsSystem/Views/Admin/EditRole.cshtml
@@ -46,7 +46,7 @@
             {
                 foreach (var user in Model.Users)
                 {
-                    <h5 class="card-title">@user</h5>
+                    <h5 class="card-title">@user.UserName</h5>
                 }
             }
             else
