--- a/AppointmentsSystem/Views/Admin/EditRole.cshtml
+++ b/AppointmentsSystem/Views/Admin/EditRole.cshtml
@@ -7,13 +7,7 @@
 <h1>Edit Role</h1>
 
 <form method="post" class="mt-3">
-    @*<div class="form-group row">
-        <label asp-for="Role.Id" class="col-sm-2 col-form-label"></label>
-        <div class="col-sm-10">
-            <input asp-for="Role.Id" text="@Model.Role.Name" disabled class="form-control">
-        </div>
-    </div>*@
-    <div class="form-group row">
+    <div class="invisible">
         <label asp-for="Role.Id" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
             <input asp-for="Role.Id" text="@Model.Role.Id" class="form-control">
