--- a/AppointmentsSystem/Views/Admin/Index.cshtml
+++ b/AppointmentsSystem/Views/Admin/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model UserListVM
 
-@{ 
+@{
     ViewData["Title"] = "Index";
 }
 
@@ -10,13 +10,21 @@
 
 <table class="table table-dark">
     <tbody>
-        @foreach(var item in Model.Users)
+        @foreach (var item in Model.Users)
         {
-        <tr>
-            <td>@item.UserName</td>
-            <td>@item.FirstName</td>
-            <td>@item.LastName</td>
-        </tr>
+            <tr>
+                <td>@item.UserName</td>
+                <td>@item.FirstName</td>
+                <td>@item.LastName</td>
+                <td>
+                    <div class="card-footer">
+                        <a asp-controller="Admin" asp-action="EditUser" asp-route-id="@item.Id" class="btn btn-primary">
+                            Edit
+                        </a>
+                        <a href="#" class="btn btn-danger">Delete</a>
+                    </div>
+                </td>
+            </tr>
         }
     </tbody>
 </table>
